add end point api logout and doc swagger
